--- a/shippingcity/res/values/strings.xml
+++ b/shippingcity/res/values/strings.xml
@@ -6,6 +6,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="error">轻触屏幕重新加载</string>
     <string name="empty_data">暂无相关数据</string>
+    
+    <!-- 货盘区-海运 -->
+    <string name="transport_type">运输方式:</string>
+    <string name="transport_time">走货日期:</string>
+    <string name="pallet_describe">货盘描述:</string>
+    
     <!-- XListView -->
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
