2015-3-28 wtw 海运详情界面

--- a/shippingcity/res/values/strings.xml
+++ b/shippingcity/res/values/strings.xml
@@ -6,12 +6,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="error">轻触屏幕重新加载</string>
     <string name="empty_data">暂无相关数据</string>
-    
+
     <!-- 货盘区-海运 -->
     <string name="transport_type">运输方式:</string>
     <string name="transport_time">走货日期:</string>
     <string name="pallet_describe">货盘描述:</string>
-    
+    <string name="transport_time_no_point">走货日期</string>
+
     <!-- XListView -->
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">松开刷新数据</string>
@@ -19,7 +20,5 @@
     <string name="xlistview_header_last_time">上次更新时间：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-    <string name="title_activity_text">TextActivity</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
