--- a/shippingcity/res/values/strings.xml
+++ b/shippingcity/res/values/strings.xml
@@ -91,8 +91,7 @@
 \n\n十三、其他规定
 \n13.1 本《协议》构成双方对本《协议》之约定事项及其他有关事宜的完整协议，除本《协议》规定的之外，未赋予本《协议》各方其他权利。
 \n\n13.2 如本《协议》中的任何条款无论因何种原因完全或部分无效或不具有执行力，本《协议》的其余条款仍应有效并且有约束力。
-\n\n13.3 本《协议》的所有标题仅仅是为了醒目及阅读方便，本身并无实际涵义，不能作为本《协议》涵义解释之依据。\n
-</string>
+\n\n13.3 本《协议》的所有标题仅仅是为了醒目及阅读方便，本身并无实际涵义，不能作为本《协议》涵义解释之依据。\n</string>
     <string name="note">备注:</string>
     <string name="quotation_deadline">报价截止时间:</string>
     <string name="quotation_time">报价时间:</string>
@@ -145,7 +144,7 @@
     <string name="GP120">1*20GP,</string>
     <string name="GP240">2*40GP,</string>
     <string name="HQ340">3*40HQ,</string>
-    
+
     <!-- 图片显示dialog -->
     <string name="viewpager_indicator">%1$d/%2$d</string>
 
@@ -164,5 +163,6 @@
     <string name="title_activity_my_quote_air_transport_bc">MyQuoteAirTransportBCActivity</string>
     <string name="title_activity_my_quote_air_transport">MyQuoteAirTransportActivity</string>
     <string name="title_activity_my_quote_history">MyQuoteHistoryActivity</string>
+    <string name="title_activity_text_json">TextJsonActivity</string>
 
 </resources>
